# shooter-game

./: .gitignore  CMakeLists.txt  README.md  color.h  curses_screen.cpp  curses_screen.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  saver.h  score_storage.h  screen.cpp  screen.h  shooter_bullet.cpp  shooter_bullet.h  shooter_decor.cpp  shooter_decor.h  shooter_enemies.cpp  shooter_enemies.h  shooter_enemy.cpp  shooter_enemy.h  shooter_game.cpp  shooter_game.h  shooter_menu.cpp  shooter_menu.h  shooter_player.cpp  shooter_player.h  shooter_player_bullet.cpp  shooter_player_bullet.h  shooter_player_bullet_enemy.cpp  shooter_player_bullet_enemy.h  shooter_player_enemy.cpp  shooter_player_enemy.h  shooter_saver.cpp  shooter_saver.h  shooter_score_storage.cpp  shooter_score_storage.h  sound_player.cpp  (+4 more)
resources/: score
